lab1/Test/L1-A-2-41.cmm
struct {
}Wi8MSIUiV9 ( ) {
  float n1OC = - ! ! ! XjBpqWItBoFgvruAw = ! ! vqfeV3OXwFp8v 
    / ZOdzI0OjvvfS / z8sEYKcD2FO0 * T4FE6YrLER6xAi9 * 
    Cx3ToMfFRGP21uJQtCl9 * ST0YhPHzcuX - YeDjovSS >= iR4uz0TuyYyRzQRmt 
    != K_QmJdCwj0k4IGF > iZXozRNV5B4Ifet > DoUpAmTAp_fBZW 
    > d_mMR <= y ;
  if ( ! ! - ! Ae8VmEEcf * ! okZ5_GGWYu ( T5jGW0MNPi6c 
    ) * - QN7sZQff ( ZK9d4eT2Si30HuycMjRz ) . dHequJlV_r 
    * - - xfQ8QCbjBD * - - fbCzg0slFTAGYH7Btfdp + - ! 
    iXkN8zZV1Hj / QDp + ! - X5pB5g / wQT9mplXCVA / gOgAd4tE0ba198bsLjwO 
    * NHc8amuNiefVj7ZszHGo * Owc32A_3 / oejCTq * RD - 
    ( - A6mHy8dej0ggqEj / Ldgk1A0QuECgIRh / ujKTcDZHRk_e 
    != hx0MyeSXYuT04NZXg > CcN6a2FCrXHttZz35gH <= EugLhTOusYjDwaqfB 
    == g >= a98sJ > MfpLj_lL1ZWAEH && FOQrr && mENuK && 
    zZIKbF8gMLDcOnJRY || zMLnSuW0i4_nh || CpSwH4u4lp7BejOzCd 
    ) * IBxhc1e * Sun7yq7ds1m - - mTBffN_ ( ) == Ad4j7Fi 
    ( ) * RIQAElGWWu0zlVnE5cqH - xOa7E - Lk_ZMS + WTh6FisL0hP1 
    - k2c7OYCQ25Q - WvgV_ec_mDq + _VYHefE9NFuoU && - ! 
    XVG8sakBB0 / bBTPYbFt4pbuu85HbwOr / jWFkPK * ngqw 
    * uwIM7HGxv2G5XUzh7M / Qoij13l42ZwZD * pQihO3PHMb4CYzjL5o 
    * xbTY5QWefb + P - UTxx2Z == w57alApLB6cRl >= wmDk1adAj6 
    && tAbUEsp7ey ( ibmPs ) . Fk3 * pmO * UkJFerIGYj7 
    <= siwOtkhF8q5N95GJI != _VfC == _b4JNdRVWA5 > moZl 
    && ! ! vX * Ko_NkjiTUnFFaHn / MVMtwC_pkKdwdaQq * PG9wn27vxme8uILMeW 
    > rpO2J <= kW < DiGMs == _Rgtr2n7FXjkT5OkF != vbM5qh 
    != uSOJoQ6XEDKPKi3 == kpLWpI2Z25ew == bsESVKh1PIeAL_H_liJq 
    <= fhryOVfiwcaTFb6i < ihfBm < == EbqOKA4 >= MWP9cfSOKypMHEUFN9 
    > ftiW != Hh9jqAXFh2 == FFOpa2arCTOHRL >= su <= jxg79IFQh02jCPrS 
    )   if ( RTJwneOZirCBXnDhtwg )   C7gHpN ;
else   ;


}
float qF ( ) {
  int Z , S [ 1668696788 ] [ 1264353824 ] = - eT_u2 
    * Z / C7cTgGqT9JnIzyC / DFK2n4Un89VDcz9om19C * qWsSI2AIBjGK 
    * cHfRH + EcKT7jIaV0gLVx3 + qtsUyJF0kciixKF0 + SeOvi 
    <= PsYCOKu8xCzFoi4q9 <= K1iRKZjfIgoKkF != H_kDiX <= 
    net0vN4uxx || OSD ;
  if ( - - ! J9XFEF9d = zCxNa_ZeGOuh ( HOJImloUBCFVHK_jtvn9 
    ) = vYufghPUGeTxODUYLFm )   if ( noQo7RsJ )   FtYMPBA91LXzkhW 
    ;
else   ;

else   if ( oKxzqyDsU )   LyTjqAtgWWyQ0uBl ;


  if ( - ! DjBJ1Tdecwv = B1Um0wDu3h )   I ;
else   if ( p3pHygfVuEnwvrWa )   seCQtAd8PXw7A8PtEK 
    ;


}
float TQNU2F4ypw 
;
